UPDATE: Add new dependencies for Angus Mail and Maven Surefire Plugin in pom.xml. Enhance README with detailed application scope and technology stack. Improve i18n scripts for better concurrency control and error handling. Update AdminLayoutAdvice to include SchoolWhatsappSettingService for chat page management.